8-133
Applied mirkosp's custom range patch
Fixed info text font issue
Fixed tab order in ymc cutter
Made yatta and ymc system dpi aware and fixed most scaling issues
Fixed info text color so it's always black and no system color
Migrated to delphi xe7 and fixed several breaking unicode bugs introduced in 7-132

7-132
Migrated to unicode (avisynth is still not though), delphi xe2 is now the recommended compiler.

7-131
UPDATE TO FIELDHINT 0.12 FOR BETTER PERFORMANCE.
Changed the stupid ymc behavior where failed and cancelled tasks had to be reset.
Fixed the fastmm error that sometimes happened on ymc close.
Fixed a rare list index out of bounds error when selecting a custom list in the tool window.
Disabled xp style controls in ymc to work around a delphi 7 vcl bug that made some dialogs not always draw properly in win7.
Fixed scroll bars in SCXvid config window.
Fix resizing issues with the ymc crop window for small videos.
Added EEDI3 and NNEDI3 to the postprocessor list in yatta and fixed a minor bug with the list.
Fixed the resize filter in ymc, it has been broken forever but nobody mentioned it.
Correctly flag the cutter filter in ymc as not a metrics collector.
Made the cutter window resizable in ymc.
Added some more filters to filterlist.txt.
Yatta will now try to suggest the appropriate audio file and delay, pressing no in the dialog makes it suggest the next matching file.
Dropped all sclavc and IT support. SCXvid and TFM have better in every way for many years now.
Now saves and loads the messages in the log window.
Extend preset backward to previous occurrence key. (default b)
Added buttons and hotkeys to jump +-50 frames in the YMC cutter.
Compiled with FastMM 4.97 and Graphics32 1.9.0
Added keys to cycle through the custom lists. (X/Z default)

7-130
No final release for you, suckers.
Generalized the main window zoom a bit more. Now it's perfect.
Made it possible to import the custom list declarations and general settings from other yaps too.